--- a/style.css
+++ b/style.css
@@ -200,3 +200,30 @@ ul.navigation a:hover {
     margin-bottom: 10px;
     font-size: 18px;
 }
+.package-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+.package {
+    background-color: rgb(40, 41, 46);
+    border: 3px solid #000000;
+    border-radius: 8px;
+    padding: 20px;
+    text-align: center;
+    color: rgb(189, 186, 186);
+    transition: transform 0.3s ease-in-out; 
+}
+
+.package:hover {
+    transform: scale(1.05); 
+}
+
+.image-container {
+    position: relative;
+    width: 100%; 
+    height: 300px; 
+    margin: 0 auto; 
+}
